# examples-utils

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  requirements-benchmark.txt  requirements-common.txt  requirements-dev.txt  requirements-jupyter.txt  requirements-logger.txt  requirements.txt  setup.py
.github/workflows/: .pre-commit-config.yaml  pytest-ci.yaml  pytest.yaml
examples_utils/: __init__.py  __main__.py  api_tools.py
examples_utils/benchmarks/: README.md  args.py  command_utils.py  distributed_utils.py  environment_utils.py  logging_utils.py  metrics_utils.py  monitoring_utils.py  notebook_utils.py  profiling_utils.py  requirements.txt  requirements_utils.py  run_benchmarks.py  slurm_utils.py
examples_utils/benchmarks/docs/: CMakeLists.txt  cbt.json  docs_poplar-config.cmake.in  gen_docs.sh.in
examples_utils/benchmarks/docs/user_guide/: Doxyfile.in  checkpointing.rst  index.rst  introduction.rst  legal.rst  multiple_hosts.rst  profiling_monitoring_tools.rst  reproducing_performance.rst  specification_files.rst
examples_utils/command_logger/: README.md  __init__.py  config_logger.py  gc_logger.py
examples_utils/custom_ops/: __init__.py  custom_ops_utils.py
examples_utils/load_lib/: load_lib.py
examples_utils/load_lib_utils/: cppimport_backports.py  load_lib_utils.py
examples_utils/notebook_logging/: README.md  __init__.py  cell_execution_tracker.py  cell_logger.py  columns.txt  error_classifcation_query.sql  gc_logger.py  get_click_stats.py  get_click_stats2.py  get_notebook_names.py  linkpath_to_names.json  sample_response.json
examples_utils/paperspace_dataset_load_check/: dataset_upload_checker.py
examples_utils/paperspace_utils/: __init__.py  dataset_upload_checker.py  health_check.py  ipu_metrics.py  metadata_utils.py  run_paperspace_utils.py  symlink_datasets_and_caches.py  test_metadata.py
examples_utils/parsing/: __init__.py  file_argparse.py  simple_parsing_tools.py  simple_utils.py
examples_utils/sdk_version_hash/: .rendered.sdk_version_hash_lib.cpp  __init__.py  sdk_version_hash.py
examples_utils/testing/: test_commands.py  test_copyright.py
log_2023-05-09-15.31.30.754114/: benchmark_results.csv  benchmark_results.json
tests/: test_benchmarks.py  test_config_logger.py  test_custom_ops.py  test_file_argparser.py  test_load_lib.py  test_metadata.py  test_notebook_logging.py  test_notebook_utils.py  test_pinned_requirements.py  test_requirements_variants.py
tests/test_files/: configs.yml  mock_requirements.txt  (+5 more)
(+11 files in other folders)
